# build-with-baml

./: .env.example  .gitignore  README.md  extract_movie_plot.py  pyproject.toml
data/movie_plots/: Dunkirk (2017 film).txt  The Lunchbox.txt
data/movies/nodes/: movie.csv
data/movies/plots/: Inception (film).txt  Interstellar (film).txt  Prometheus (2012 film).txt
data/nobel_laureates/: scholars.json
data/nobel_laureates/hand_annotated/: female_laureates_until_2022.csv
data/nobel_laureates/human_annotated/: female_laureates_until_2022.csv  scholars_random.csv  unknown_scholars.csv
data/nobel_laureates/predicted/: scholars_from_baml_gemma3_12b.jsonl  scholars_from_baml_gemma3_27b.jsonl  scholars_from_baml_gpt-4o-mini.jsonl  scholars_from_genderapi.jsonl
data/nobel_laureates/with_gender/: scholars_from_baml_gemma3_12b.jsonl  (+2 more)
src/classification/: README.md  baml_classifier_async.py  baml_classifier_sync.py  eval_female_laureates.py  eval_random_scholars.py  eval_unknown.py  genderapi_classifier.py  run_baml.py
src/gender_classification/: README.md  baml_classifier_async.py  baml_classifier_sync.py  eval_random_scholars.py  eval_unknown.py  genderapi_classifier_async.py
src/graph_rag/: README.md  create_graph.py  docker-compose.yml  pyproject.toml  run_baml.py  schema-format.json
src/graph_rag/baml_client/: async_client.py  async_request.py  inlinedbaml.py  parser.py  partial_types.py  sync_client.py  sync_request.py  type_builder.py  types.py
src/graph_rag/baml_src/: clients.baml  rag.baml
src/rag/: README.md  extract_movie_plot.py  ingest_data.py  run_baml.py
src/rag/baml_client/: types.py  (+8 more)
(+18 files in other folders)
