[project]
name = "baml-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "baml-py>=0.74.0",
    "kuzu>=0.7.1",
    "lancedb>=0.18.0",
    "polars>=1.21.0",
    "pyarrow>=19.0.0",
    "wikipedia>=1.4.0",
    "wptools>=0.4.17",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
